[tool.poetry]
name = "parsera"
version = "0.1.10"
description = "Lightweight library for scraping web-sites with LLMs"
authors = ["Mikhail Zanka <raznem@gmail.com>"]
license = "GPL-2.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
langchain = "^0.2.6"
langchain-openai = "^0.1.8"
playwright = "^1.44.0"
playwright-stealth = "^1.0.6"
markdownify = "^0.13.1"
python-dotenv = "^1.0.1"
argparse = "^1.4.0"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pylint = "^2.17.4"
pytest = "^8.2.2"
jupyterlab = "^4.2.4"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.34"

[tool.poetry.group.transformers]
optional = true

[tool.poetry.group.transformers.dependencies]
transformers = "^4.44.2"
torch = "^2.4.0"
torchvision = "^0.19.0"
torchaudio = "^2.4.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
